Fix hero text overlapping div on 470px and below

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -770,7 +770,7 @@ textarea {
     #hero-text-left {
         top: 2px;
         left: 2px;
-        height: 200px;
+        height: 220px;
         width: 300px;
         font-size: 100%;
 
